# hermes-feishu

./: .gitignore  README.md  pyproject.toml
docs/: installation.md
src/hermes_feishu/: __init__.py  card_builder.py  plugin.yaml  schemas.py  sender.py  tools.py
tests/: test_card_builder.py  test_table_parser.py  test_tools.py
