[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-feishu"
version = "0.2.0"
description = "Enhanced Feishu/Lark messaging for Hermes Agent with card messages and table rendering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "hermes-feishu contributors"},
]
keywords = ["hermes", "feishu", "lark", "agent", "plugin", "card", "table"]
dependencies = [
    "lark-oapi>=1.5.3,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.entry-points."hermes_agent.plugins"]
hermes-feishu = "hermes_feishu"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_feishu = ["plugin.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
